<resources>
    <string name="app_name">Quiz App</string>
    <string name="app_title">Quiz App</string>
    <string name="high_score">Highscore: 0</string>
    <string name="start_button">Start Quiz</string>
    <string name="score_view">Score: 0</string>
    <string name="question">Question: 1/x</string>
    <string name="timer">00:30</string>
    <string name="answer_option1">Option 1</string>
    <string name="answer_option2">Option 2</string>
    <string name="answer_option3">Option 3</string>
    <string name="my_question">Questions go here</string>
    <string name="confirm_next_button">Confirm</string>
</resources>
